@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Aug 2007; Ulrich Mueller <ulm@gentoo.org> emacs-22.1-r1.ebuild:
+  No need to recompile if we have bootstrapped before.
+
   25 Aug 2007; Christian Faulhammer <opfer@gentoo.org>
   +files/emacs-22.1-backup-buffer.patch, emacs-22.1-r1.ebuild:
   sync with Portage
